fix text-align for headings and profile

--- a/style.css
+++ b/style.css
@@ -29,5 +29,10 @@ footer {
 
 h3 {
     color: #373A40;
-    
+    text-align: center;
+    font-size: 20px;
+}
+
+#profile {
+    text-align: center;
 }
